--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,9 @@
 trigger:
 - main
 
-variables:
-  # Azure service connection established during pipeline creation
-  azureSubscription: efe6f822-b14e-443e-a09e-75d116511fad
-  appName: DeployAzureDevOps
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-- task: AzureFunctionApp@1 # Add this at the end of your file
+- task: AzureFunctionApp@2
   inputs:
-    azureSubscription: efe6f822-b14e-443e-a09e-75d116511fad
-    appType: functionAppLinux # default is functionApp
-    appName: $(appName)
-    package: $(System.ArtifactsDirectory)/**/*.zip
-    #Uncomment the next lines to deploy to a deployment slot
-    #Note that deployment slots is not supported for Linux Dynamic SKU
-    #deployToSlotOrASE: true
-    #resourceGroupName: '<Resource Group Name>'
-    #slotName: '<Slot name>'
+    appType: 'functionAppLinux'
+    appName: 'DeployAzureDevOps'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
