Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ trigger:
 
 - task: AzureFunctionApp@2
   inputs:
+    connectedServiceNameARM: 'Pay-As-You-Go(efe6f822-b14e-443e-a09e-75d116511fad)'
     appType: 'functionAppLinux'
     appName: 'DeployAzureDevOps'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
