Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,4 +7,5 @@ trigger:
     appType: 'functionAppLinux'
     appName: 'DeployAzureDevOps'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    runtimeStack: 'PYTHON|3.9'
     deploymentMethod: 'auto'
