--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,12 @@ steps:
   inputs:
     PathtoPublish: '$(System.DefaultWorkingDirectory)/build$(Build.BuildId).zip'
     artifactName: 'drop'
+
+- task: AzureFunctionApp@2
+  inputs:
+    connectedServiceNameARM: 'Pay-As-You-Go(efe6f822-b14e-443e-a09e-75d116511fad)'
+    appType: 'functionAppLinux'
+    appName: 'DeployAzureDevOps'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    runtimeStack: 'PYTHON|3.9'
+    deploymentMethod: 'auto'
